--- a/src/components/sections/Main/MainComponent.css
+++ b/src/components/sections/Main/MainComponent.css
@@ -43,6 +43,7 @@
     width: 100%;
     max-height: 322px;
     object-fit: cover;
+    border-radius: 30px;
 }
 
 .main__section--content {
@@ -73,5 +74,8 @@
     }
     .main::before {
         display: none;
+    }
+    .main__section--image img {
+        border-radius: 0;
     }
 }
